--- a/style.css
+++ b/style.css
@@ -34,11 +34,34 @@ a:active {
 .container-block {
 	width: 100%;
 	height: auto;
-	min-width: 1000px;
 	max-height: 100vh;
 	aspect-ratio: 16 / 9;
 	background-color: black;
 }
+
+.index {
+	background-image: url("./img/bg.jpg");
+	min-width: unset;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-content: flex-start;
+  }
+  .index.bgsize {
+	background-size: auto 100%;
+  }
+  .index-content {
+	  width: 100%;
+	  height: auto;
+	  max-width: 1920px;
+	  max-height: 1080px;
+	  aspect-ratio: 16 / 9;
+	  display: grid;
+	  grid-template-rows: 56% 40%;
+	  grid-template-columns: 55% 45%;
+	  margin: 0 auto;
+  }
+
 
   .logo {
 	width: 16%;
